--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplecomponent_v2",
+  "name": "simplecomponent_v3",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev",
@@ -17,9 +17,5 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
   },
-  "types": "./dist/index.d.ts",
-  "type": "module",
-  "svelte": "index.ts",
-  "main": "index.ts",
-  "module": "index.ts"
+  "type": "module"
 }
